--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Linksy">
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashScreenActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashScreenTheme"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
