added authorization activity

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -9,10 +9,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Linksy">
         <activity
+            android:name=".AuthActivity"
+            android:exported="false" />
+        <activity
             android:name=".SplashScreenActivity"
+            android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/SplashScreenTheme"
-            android:exported="true">
+            android:theme="@style/SplashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
