--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name = "com.emil.linksy.app.App"
+        android:name="com.emil.linksy.app.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Linksy"
         tools:ignore="Instantiatable">
+        <activity
+            android:name="com.emil.linksy.presentation.ui.UserActivity"
+            android:exported="false" />
         <activity
             android:name="com.emil.linksy.presentation.ui.LanguageSelectionActivity"
             android:exported="false" />
