submitted the token update to the service

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Linksy"
         tools:ignore="Instantiatable">
+        <service
+            android:name="com.emil.linksy.app.service.TokenService"
+            android:enabled="true"
+            android:exported="false" />
         <activity
             android:name="com.emil.linksy.presentation.ui.UserActivity"
             android:exported="false" />
