--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Linksy"
+        android:usesCleartextTraffic="true"
         tools:ignore="Instantiatable">
         <service
             android:name="com.emil.linksy.app.service.TokenService"
