--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:name="com.emil.linksy.app.App"
         android:allowBackup="true"
@@ -17,11 +17,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Linksy"
         android:usesCleartextTraffic="true"
-        tools:ignore="Instantiatable">
+        tools:ignore="Instantiatable" >
+        <activity
+            android:name="com.emil.linksy.presentation.ui.FullScreenVideoActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="false"
+            android:label="@string/title_activity_full_screen_video"
+            android:theme="@style/FullScreenActivity" />
+
         <service
             android:name="com.emil.linksy.app.service.TokenService"
             android:enabled="true"
             android:exported="false" />
+
         <activity
             android:name="com.emil.linksy.presentation.ui.UserActivity"
             android:exported="false" />
@@ -34,7 +42,7 @@
         <activity
             android:name="com.emil.linksy.presentation.ui.SplashScreenActivity"
             android:exported="true"
-            android:theme="@style/SplashScreenTheme">
+            android:theme="@style/SplashScreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
