--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -17,7 +17,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Linksy"
         android:usesCleartextTraffic="true"
-        tools:ignore="Instantiatable" >
+        tools:ignore="Instantiatable">
+        <activity
+            android:name="com.emil.linksy.presentation.ui.page.UserPageActivity"
+            android:exported="false" />
         <activity
             android:name="com.emil.linksy.presentation.ui.FullScreenVideoActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -30,18 +33,18 @@
             android:exported="false" />
 
         <activity
-            android:name="com.emil.linksy.presentation.ui.UserActivity"
+            android:name="com.emil.linksy.presentation.ui.navigation.MainNavigationActivity"
             android:exported="false" />
         <activity
-            android:name="com.emil.linksy.presentation.ui.LanguageSelectionActivity"
+            android:name="com.emil.linksy.presentation.ui.auth.LanguageSelectionActivity"
             android:exported="false" />
         <activity
-            android:name="com.emil.linksy.presentation.ui.AuthActivity"
+            android:name="com.emil.linksy.presentation.ui.auth.AuthActivity"
             android:exported="false" />
         <activity
             android:name="com.emil.linksy.presentation.ui.SplashScreenActivity"
             android:exported="true"
-            android:theme="@style/SplashScreenTheme" >
+            android:theme="@style/SplashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
