--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,11 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
         android:name="com.emil.linksy.app.App"
@@ -18,6 +23,9 @@
         android:theme="@style/Theme.Linksy"
         android:usesCleartextTraffic="true"
         tools:ignore="Instantiatable">
+        <activity
+            android:name="com.emil.linksy.presentation.ui.CameraXActivity"
+            android:exported="false" />
         <activity
             android:name="com.emil.linksy.presentation.ui.page.UserPageActivity"
             android:exported="false" />
