--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.Linksy"
         tools:ignore="Instantiatable">
         <activity
+            android:name="com.emil.linksy.presentation.ui.navigation.chat.MessageActivity"
+            android:exported="false" />
+        <activity
             android:name="com.emil.linksy.presentation.ui.CameraXActivity"
             android:exported="false" />
         <activity
