added the ability to create groups (chats of several participants), and when you click on messages in the group, the number of participants is displayed and you can now view their profiles.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
         android:theme="@style/Theme.Linksy"
         tools:ignore="Instantiatable">
         <activity
+            android:name="com.emil.linksy.presentation.ui.navigation.chat.ChatMemberActivity"
+            android:exported="false" />
+        <activity
+            android:name="com.emil.linksy.presentation.ui.navigation.chat.CreateGroupActivity"
+            android:exported="false" />
+        <activity
             android:name="com.emil.linksy.presentation.ui.navigation.chat.MessageActivity"
             android:exported="false" />
         <activity
