added an active chat connection via websocket, and now the message list is loaded from the server when it crashes - from the cache,incorrect message image has been fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,10 @@
             android:name="com.emil.linksy.app.service.TokenService"
             android:enabled="true"
             android:exported="false" />
-
+        <service
+            android:name="com.emil.linksy.app.service.WebSocketService"
+            android:enabled="true"
+            android:exported="false" />
         <activity
             android:name="com.emil.linksy.presentation.ui.navigation.MainNavigationActivity"
             android:exported="false" />
