--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name="com.emil.linksy.presentation.ui.navigation.channel.CreateChannelActivity"
             android:exported="false" />
         <activity
-            android:name="com.emil.linksy.presentation.ui.navigation.chat.ChatMemberActivity"
+            android:name="com.emil.linksy.presentation.ui.navigation.chat.GroupActivity"
             android:exported="false" />
         <activity
             android:name="com.emil.linksy.presentation.ui.navigation.chat.CreateGroupActivity"
