--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.Linksy"
         tools:ignore="Instantiatable">
         <activity
+            android:name="com.emil.linksy.presentation.ui.auth.PrivacyPolicyActivity"
+            android:exported="false" />
+        <activity
             android:name="com.emil.linksy.presentation.ui.navigation.channel.EditChannelActivity"
             android:configChanges="orientation|screenSize"
             android:exported="false" />
