--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,6 @@ gradle.properties
 gradlew
 gradlew.bat
 settings.gradle.kts
-app/src/test
-app/src/androidTest
-
+/app/src/test/
+/app/src/androidTest/
+.gitignore
